create edit , search

--- a/angCrud/src/app/components/game-edit/game-edit.component.html
+++ b/angCrud/src/app/components/game-edit/game-edit.component.html
@@ -1,1 +1,24 @@
-<p>game-edit works!</p>
+<form (ngSubmit)="updateGame()" [formGroup]="editGameForm">
+    <div class="form-group">
+      <label for="game_name">Game name:</label>
+      <input type="text" class="form-control" id="game_name" name="game_name" formControlName="name" placeholder="Enter game" >
+    </div>
+    <div class="form-group">
+      <label for="game_price">Game price:</label>
+      <input type="number" class="form-control" id="game_price" formControlName="price" name="game_price" min="0" max="9999" >
+    </div>
+    <div class="form-group">
+      <label for="game_platform">Game platform:</label>
+      <select class="form-control" id="game_platform" formControlName="platform"  name="game_platform" >
+        <option value="All" name="All" >All</option>
+        <option value="PC" name="PC" >PC</option>
+        <option value="xbox" name="Xbox">Xbox</option>
+        <option value="Sony-Playstation" name="Sony-Playstation">Sony-Playstation</option>
+        <option value="Nintendo" name="Nintendo">Nintendo</option>
+        <option value="Mobile" name="Mobile">Mobile</option>
+      </select>
+    </div>
+    <div class="form-group form-check">
+    </div>
+    <button type="submit" class="btn btn-primary">Update</button>
+  </form>
